--- a/package.json
+++ b/package.json
@@ -7,13 +7,19 @@
   "scripts": {
     "build": "tsc && pnpm run bundle:esm && pnpm run bundle:cjs",
     "bundle:esm": "rollup build/index.js --format esm --file build/bundle.esm.js",
-    "bundle:cjs": "rollup build/index.js --format cjs --file build/bundle.cjs.js"
+    "bundle:cjs": "rollup build/index.js --format cjs --file build/bundle.cjs.js",
+    "test": "mocha --require ts-node/register 'test/*.ts'"
   },
   "author": "Jan van Brügge",
   "license": "MIT",
   "devDependencies": {
+    "@types/assert": "^1.4.4",
+    "@types/mocha": "^5.2.7",
+    "assert": "^2.0.0",
+    "mocha": "^7.0.1",
     "prettier": "^1.19.1",
     "rollup": "^1.29.1",
+    "ts-node": "^8.6.2",
     "typescript": "^3.7.5"
   },
   "prettier": {
