--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/assert": "^1.4.4",
     "@types/mocha": "^5.2.7",
     "assert": "^2.0.0",
+    "fast-check": "^1.21.0",
     "mocha": "^7.0.1",
     "prettier": "^1.19.1",
     "rollup": "^1.29.1",
