--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && pnpm run bundle:esm && pnpm run bundle:cjs",
     "bundle:esm": "rollup build/index.js --format esm --file build/bundle.esm.js",
     "bundle:cjs": "rollup build/index.js --format cjs --file build/bundle.cjs.js",
-    "test": "mocha --require ts-node/register 'test/*.ts'"
+    "test": "nyc mocha --require ts-node/register 'test/*.ts'"
   },
   "author": "Jan van Brügge",
   "license": "MIT",
@@ -18,6 +18,7 @@
     "assert": "^2.0.0",
     "fast-check": "^1.21.0",
     "mocha": "^7.0.1",
+    "nyc": "^15.0.0",
     "prettier": "^1.19.1",
     "rollup": "^1.29.1",
     "ts-node": "^8.6.2",
