--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,17 @@
 {
-  "compilerOptions": {
-    "removeComments": false,
-    "preserveConstEnums": true,
-    "sourceMap": true,
-    "declaration": true,
-    "strict": true,
-    "moduleResolution": "node",
-    "target": "es6",
-    "outDir": "build"
-  },
-  "formatCodeOptions": {
-    "indentSize": 2,
-    "tabSize": 2
-  },
-  "files": ["src/index.ts"]
+    "compilerOptions": {
+        "removeComments": false,
+        "preserveConstEnums": true,
+        "sourceMap": true,
+        "declaration": true,
+        "strict": true,
+        "moduleResolution": "node",
+        "target": "es6",
+        "outDir": "build"
+    },
+    "formatCodeOptions": {
+        "indentSize": 2,
+        "tabSize": 2
+    },
+    "include": ["./src/**/*", "./test/**/*", "./perf/**/*"]
 }
