--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "typescript": "^3.7.5",
     "xstream": "^11.11.0"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "prettier": {
     "singleQuote": true
   }
