--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "tsc -b tsconfig.build.json && pnpm run bundle:esm && pnpm run bundle:cjs",
     "bundle:esm": "rollup build/index.js --format esm --file build/bundle.esm.js",
     "bundle:cjs": "rollup build/index.js --format cjs --file build/bundle.cjs.js",
+    "release": "pnpm run prepublishOnly && release-it",
     "format": "prettier --write './{src,test,perf}/**/*'",
     "test": "nyc --reporter text --reporter html pnpm run test:no_cover",
     "test:ci": "nyc --reporter text --reporter json pnpm run test:no_cover",
@@ -30,6 +31,7 @@
     "most": "^1.8.0",
     "nyc": "^15.0.0",
     "prettier": "^1.19.1",
+    "release-it": "^14.2.2",
     "rollup": "^1.29.1",
     "rxjs": "^6.5.4",
     "ts-node": "^8.6.2",
